erros.txt
cartas.c:168:32: warning: ‘struct STATE’ declared inside parameter list [enabled by default]
 void parse(char *query, struct STATE) {
                                ^
cartas.c:168:32: warning: its scope is only this definition or declaration, which is probably not what you want [enabled by default]
cartas.c:168:32: error: parameter 2 has incomplete type
cartas.c: In function ‘parse’:
cartas.c:168:32: error: parameter name omitted
cartas.c:170:2: error: unknown type name ‘STATE’
  STATE e;
  ^
cartas.c:172:30: error: request for member ‘mao’ in something not a structure or union
  if(sscanf(query, "q=%lld", e.mao[0]) == 1) {
                              ^
cartas.c:173:21: error: request for member ‘mao’ in something not a structure or union
   imprime(BARALHO, e.mao[0]);
                     ^
cartas.c:175:30: error: request for member ‘mao’ in something not a structure or union
   distribuir(ESTADO_INICIAL,e.mao);
                              ^
cartas.c:176:16: error: request for member ‘mao’ in something not a structure or union
   maoUser = *(e.mao);
                ^
cartas.c:170:8: warning: variable ‘e’ set but not used [-Wunused-but-set-variable]
  STATE e;
        ^
cartas.c: In function ‘main’:
cartas.c:188:35: error: expected ‘:’, ‘,’, ‘;’, ‘}’ or ‘__attribute__’ before ‘=’ token
     long long unsigned int mao[4] = {0};
                                   ^
cartas.c:187:10: warning: struct has no members [-Wpedantic]
  typedef struct {

